Multiple small changes - Resized logo images and favicon - Moved navbar higher on mobile - Removed mobile webkit patch - Fixed navbar padding on mobile

--- a/src/css/dekstop.css
+++ b/src/css/dekstop.css
@@ -1,15 +1,13 @@
 @media screen and (min-width: 601px) {
+    #start {
+        height: 100vh;
+        overflow: hidden;
+    }
+
     .fixToTop{
         position: fixed !important;
         top:0px;
         bottom: unset !important;
-    }
-
-    .navItem {
-        -webkit-transition: all 1s ease;
-        -moz-transition: all 1s ease;
-        -o-transition: all 1s ease;
-        transition: all 1s ease;
     }
 
     .navItem:hover {
