--- a/src/css/main.css
+++ b/src/css/main.css
@@ -51,11 +51,13 @@ body {
 }
 
 .panel {
+    background-color: rgb(200, 205, 235);
+
     overflow: hidden;
     width: 100vw;
     max-width: 100%;
-    height: 100vh;
-    min-height: 100%;
+    height: fit-content;
+    min-height: 100vh;
 }
 
 .footer {
@@ -95,6 +97,11 @@ body {
 }
 
 #navbar {
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
+
     position: absolute;
     display: flex;
     width: 100%;
